src/test/deca/context/invalid/created/binary exp/modulo_float_bool.deca
// Description :
//    test modulo entre un float et un boolen
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: L’opérande gauche est de type float. L’opérande droite est de type bool. Or les opérandes d’un modulo doivent être de type ‘int’

{
float a;
bool b;
int c = a % b;
}